# fprint_demo

./: .gitignore  Makefile.am  NEWS  README  autogen.sh  configure.ac  fprint_demo.desktop
icons/: Makefile.am
src/: Makefile.am  enroll.c  fprint_demo.h  identify.c  img.c  main.c  verify.c
