AC_INIT([fprint_demo], [0.4])
AM_INIT_AUTOMAKE
AC_CONFIG_SRCDIR([src/main.c])

AC_PREREQ([2.50])
AC_PROG_CC
AM_PROG_CC_C_O

PKG_CHECK_MODULES(FPRINT, "libfprint")
AC_SUBST(FPRINT_LIBS)
AC_SUBST(FPRINT_CFLAGS)

PKG_CHECK_MODULES(GTK, "gtk+-2.0")
AC_SUBST(GTK_LIBS)
AC_SUBST(GTK_CFLAGS)

AC_CONFIG_FILES([Makefile] [src/Makefile])
AC_OUTPUT

