themedir = $(datadir)/icons/hicolor

scalabledir = $(themedir)/scalable/apps
scalable_DATA = scalable/fprint_demo.svg

icon16x16dir = $(themedir)/16x16/apps
icon16x16_DATA = 16x16/fprint_demo.png

icon22x22dir = $(themedir)/22x22/apps
icon22x22_DATA = 22x22/fprint_demo.png

icon48x48dir = $(themedir)/48x48/apps
icon48x48_DATA = 48x48/fprint_demo.png

icon128x128dir = $(themedir)/128x128/apps
icon128x128_DATA = 128x128/fprint_demo.png

EXTRA_DIST =			\
	$(scalable_DATA)	\
	$(icon16x16_DATA)	\
	$(icon22x22_DATA)	\
	$(icon48x48_DATA)	\
	$(icon128x128_DATA)

